Remove About Dr. section, update financing options, fix photo gallery overlap, add social links, update footer copyright

--- a/css/style.css
+++ b/css/style.css
@@ -3016,6 +3016,11 @@ p {
   font-size: var(--fs-xs);
 }
 
+.footer__copyright a {
+  color: var(--clr-gold);
+  text-decoration: underline;
+}
+
 .footer__bottom-links {
   display: flex;
   gap: var(--sp-md);
@@ -3487,17 +3492,11 @@ p {
   }
 
   .photo-gallery__grid {
-    grid-template-columns: 2fr 2fr 1.5fr;
-    grid-template-rows: 1fr 1fr;
-    min-height: 500px;
-  }
-
-  .photo-gallery__item:nth-child(2) {
-    grid-row: 1 / 3;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .photo-gallery__item img {
-    height: 100%;
+    height: 280px;
   }
 }
 
@@ -3601,6 +3600,10 @@ p {
 
   .contact-form-section__grid {
     grid-template-columns: 1fr 1fr;
+  }
+
+  .photo-gallery__grid {
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .footer__bottom-inner {
